--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,6 +511,7 @@ p {
   background-image: url("../images/background1.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 #hero .container {
