--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,7 +508,7 @@ p {
   width: 100%;
   height: 100vh;
   background: #000a0e;
-  background-image: url("../images/background1.png");
+  background-image: url("../images/background1.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
