--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,12 +505,22 @@ p {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
+.container {
   width: 100%;
   height: 100vh;
-  background: #000a0e;
-  background-image: url("../images/background1.svg");
+  background-color: #000a0e; /* Fallback color */
+  background-image: url("../images/background1.svg"); /* Path to your SVG file */
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+}
+
+
+@media (max-width: 767px) {
+  .container {
+    background-size: contain;
+    background-position: top;
+  }
 }
 
 #hero .container {
