--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,14 +505,12 @@ p {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-.container {
   width: 100%;
   height: 100vh;
-  background-color: #000a0e; /* Fallback color */
-  background-image: url("../images/background1.svg"); /* Path to your SVG file */
+  background: #000a0e;
+  background-image: url("../images/background1.svg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
 }
 
 
